--- a/views/flogin.ejs
+++ b/views/flogin.ejs
@@ -1,90 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <title>Split Bills</title>
+    <link rel="shortcut icon" href="/images/logo.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Login- Smart Splitter</title>
-
+    <link rel="stylesheet" type="text/css" href="../css/Auth.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
-<style>
-    h1 {
-        font-size: 34px;
-        font-family: unset;
-    }
-    
-    #form {
-        font-size: 22px;
-    }
-    
-    #ph {
-        font-size: 20px;
-        width: 80%;
-    }
-    
-    #col1 {
-        padding: 34px;
-        margin-top: 90px;
-        margin-left: 0px;
-    }
-    
-    #col2 {
-        padding: 34px;
-        margin-top: 90px;
-        margin-left: 80px;
-    }
-</style>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col" id="col1">
-                <h2>About Us</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere corrupti voluptate, consequatur a perferendis qui distinctio ea illum vel adipisci quae numquam iste voluptas ducimus quidem provident nihil nesciunt omnis.
-                </p>
-            </div>
-            <div class="col" id="col2">
+    <div class="main">
+        <input type="checkbox" id="chk" aria-hidden="true">
 
-                <h1>Welcome Back!</h1><br>
+        <div class="signup">
+            <form action="/views/Signup" method="post">
+                <label for="chk" aria-hidden="true">Sign up</label>
+                <input type="text" name="fname" placeholder="first name" required="">
+                <input type="text" name="lname" placeholder="last name" required="">
+                <input type="email" name="email" placeholder="Email" required="">
+                <input type="password" name="pass" placeholder="Password" required="">
+                <button type="submit">Sign up</button>
+            </form>
+        </div>
 
-                <form action="/" method="post">
-
-                    <label for="email" id="form">Email</label>
-                    <br>
-                    <div>
-                        <input name="email" type="email" name="email" id="ph" placeholder="Enter your email">
-                    </div>
-                    <br>
-                    <label for="pass" id="form">Password</label>
-                    <div>
-                        <input name="pass" type="password" name="pass" id="ph" placeholder="Enter you password">
-                    </div>
-                    <br>
-                    <div>
-
-                        <button type="submit" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-                    </div>
-                    <div><p>incorrect password</p></div>
-                    <br>
-                    <div>
-                        <p>Not a member? <a href="/Signup">Register here</a></p>
-
-
-                    </div>
-
-                </form>
-            </div>
-
+        <div class="login">
+            <form action="/" method="post">
+                <label for="chk" aria-hidden="true">Login</label>
+                <input type="email" name="email" placeholder="Email" required="">
+                <input type="password" name="pass" placeholder="Password" required="">
+                <%if(message.length > 0){%>
+                    <p class="alert alert-danger">
+                        <%= message %>
+                    </p>
+                    <%}%>
+                        <button type="submit">Login</button>
+            </form>
         </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
