--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -26,11 +26,11 @@
                     <div class="right"></div>
                 </div>
                 <li class="nav-item active">
-                    <a class="nav-link" href="groupList"><i class="bi bi-people"></i> Group List</a
+                    <a class="nav-link" href="/groupList"><i class="bi bi-people"></i> Group List</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="notifications/<%= fun[0]._id %>"
+            <a class="nav-link" href="/notifications/<%= fun[0]._id %>"
               ><i class="bi bi-bell"></i> Notification</a
             >
           </li>
