--- a/views/notifications.ejs
+++ b/views/notifications.ejs
@@ -2,25 +2,33 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/css/navbar.css" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Group list</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
     <%- include('navbar.ejs') %>
         <h2>Notifications</h2>
+        <% borrower = ["Stuti","Vaishnavi", "Mayank"]%>
+            <% amount = [400, 800, 1200] %>
+                <ul>
+                    <% for(var i=0; i< borrower.length; i++){%>
+                        <li class="card">
+                            <div class="card-body">
+                                You lent
+                                <%= amount[i]%> to
+                                    <%= borrower[i] %>
 
-        <ul>
-            <% for(var i=0; i< borrower.length; i++){%>
-                <li class="card">
-                    <div class="card-body">
-                        You lent
-                        <%= amount  %> to
-                            <%= borrower[i] %>
-
-                    </div>
-                </li>
-                <%}%>
-        </ul>
+                            </div>
+                        </li>
+                        <%}%>
+                </ul>
 
 </body>
 
